--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -10,8 +10,12 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		
 		<link rel="icon" type="image/png" href="./../image/favicon-16x16.png">
+		<!-- read css and js for Windows -->
 		<link rel="stylesheet" href="./../css/game.css"/>
 		<script src="./../js/game.js"></script>
+		<!-- read css and js for Mac -->
+		<link href="/css/game.css" rel="stylesheet">
+		<script src="/js/game.js"></script>
 	</head>
 
 	<body>
