--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -9,13 +9,13 @@
 		<!-- BOOTSTRAP:JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		
+		<!-- INSERTING JQUERY -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 		<link rel="icon" type="image/png" href="./../image/favicon-16x16.png">
-		<!-- read css and js for Windows -->
-		<link rel="stylesheet" href="./../css/game.css"/>
-		<script src="./../js/game.js"></script>
-		<!-- read css and js for Mac -->
-		<link href="/css/game.css" rel="stylesheet">
-		<script src="/js/game.js"></script>
+	
+		<link href="static/css/game.css" rel="stylesheet">
+		<script src="static/js/game.js"></script>
 	</head>
 
 	<body>
@@ -38,22 +38,24 @@
 				<div class='container'>
 					<div class= "row">
 						<div class="jumbotron well">
-							<h1 class="text-center">{{q.question}}</h1>
+							<h1 class="text-center" id='question'>{{q.question}}</h1>
 						</div>
 					</div>
 				</div>
+				<br>
 				<div class='container'>
 					<div class= "row answers">
-						<div class='col-md-6 text-center'>A. {{q.answer}}</div>
-						<div class='col-md-6 text-center'>B. {{q.option_1}} </div>
+						<div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
+						<div class='col-md-6 text-center option'  id="option_2">B. {{q.option_1}} </div>
 					</div>
 					
 					<div class= "row answers">
-						<div class='col-md-6 text-center'>C {{q.option_2}}</div>
-						<div class='col-md-6 text-center'>D {{q.option_3}}</div>
+						<div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
+						<div class='col-md-6 text-center option'  id="option_4">D {{q.option_3}}</div>
 					</div>
 				</div>
 			</div>
+			<br>
 			<div class='container'>
 				​<a href='/'>QUIT GAME</a>
 			</div>
