--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -15,55 +15,84 @@
     <!-- INSERTING JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <link rel="icon" type="image/png" href="./../image/favicon-16x16.png">
+	<script src='/static/js/game.js'></script>
+	<body>
+		<header>
+			<h2>KnowItAll</h1>
+		</header>
+		<body>
+			<div class = 'container' stlye="z-index:0;">
+				<div class='container'>
+					<div class='container'>
+						<div class = "row text-center"> 
+					<div class = "row text-center"> 
+						<div class = "row text-center"> 
+								<h1>KNOWIT ALL</h1>
+						</div>
+					</div>
+					<div class='container'>
+						<div class="row">
+							<div id="app" class="mx-auto" style="width: 300px;"></div>
+						</div>
+					</div>
+					<hr>
+					<div class='container'>
+						<div class= "row">
+							<div class="jumbotron well">
+								<h1 class="text-center" id='question'>{{q.question}}</h1>
+							</div>
+						</div>
+					</div>
+					<br>
+					<div class='container'>
+						<div class= "row answers">
+							<div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
+							<div class='col-md-6 text-center option'  id="option_2">B. {{q.option_1}} </div>
+						</div>
+						
+						<div class= "row answers">
+							<div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
+							<div class='col-md-6 text-center option'  id="option_4">D {{q.option_3}}</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<hr>
+				<div class="text-center">
+					<button id = 'submitScore' class="btn btn-outline-primary" >Submit Score</button>
+				</div>
+				
+				<div class='container'>
+					​<a href='/'>QUIT GAME</a>
+				</div>
+				<br>
+			</div>
+			
+			<div  id="cover-caption" class="container" style='display: none;background-color: black;margin-top:-350px;'>
+				<div class="row text-white">
+					<div class="mx-auto text-center  p-4">
+						<h1 class="display-4 py-2 text-truncate">POST SCORE!</h1>
+						<div class="px-2">
+							<form id = 'leaderboardForm' method= "POST" action="/leaderboard/create" class="justify-content-center">
+								<div class="form-group" >
+									<label class="sr-only">Score:</label>
+									<input name='score' type="text" class="form-control" placeholder="Score"  value ='2000' readonly >
+								</div>
+								<div class="form-group">
+									<label class="sr-only">username:</label>
+									<input name = 'username' type="text" class="form-control" placeholder="Username" required>
+								</div>
+								<br>
+								<button type="submit" class="btn btn-primary btn-lg">POST!</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			
+	</body>
 
-    <link href="static/css/game.css" rel="stylesheet">
-    <script src="static/js/game.js"></script>
-</head>
 
-<body>
-<header>
-    <h2>KnowItAll</h1>
-</header>
-<body>
-<div class='container'>
-    <div class='container'>
-        <div class="row text-center">
-            <h1>KNOWIT ALL</h1>
-        </div>
-    </div>
-    <div class='container'>
-        <div class="row">
-            <div id="app" class="mx-auto" style="width: 300px;"></div>
-        </div>
-    </div>
-    <hr>
-    <div class='container'>
-        <div class="row">
-            <div class="jumbotron well">
-                <h1 class="text-center" id='question'>{{q.question}}</h1>
-            </div>
-        </div>
-    </div>
-    <br>
-    <div class='container'>
-        <div class="row answers">
-            <div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
-            <div class='col-md-6 text-center option' id="option_2">B. {{q.option_1}}</div>
-        </div>
-
-        <div class="row answers">
-            <div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
-            <div class='col-md-6 text-center option' id="option_4">D {{q.option_3}}</div>
-        </div>
-    </div>
-</div>
-<br>
-<div class='container'>
-    ​<a href='/'>QUIT GAME</a>
-</div>
-
-
-</body>
-
+	
 </html>
