--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -1,14 +1,36 @@
 <html>
 	<head>
 		<title>LeaderBoard Page</title>
+		    <!-- INSERTING BOOTSTRAP LIBRARY -->
+    <!-- BOOTSTRAP:CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- BOOTSTRAP:JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+            crossorigin="anonymous"></script>
+
 	</head>
 
 	<body>
-		<h1>LeaderBoard Page</h1>
-
-		<a href = '/game'>GO TO: Game Page</a>
-		<br>
-		<a href = '/'>GO TO: Main Page</a>
+		<div class = 'container'>
+			<h1>LeaderBoard Page</h1>
+			<table class='table'>
+				<tr>
+					<th>Username</th>
+					<th>Score</th>
+				</tr>
+				<tbody class='table-striped'>
+				{% for s in scores %}
+				<tr>
+					<td>{{ s.username }}</td>
+					<td>{{ s.score }}</td>
+				</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			<a href = '/game' class = 'btn btn-primary'> Game Page</a>  <a href = '/' class = 'btn btn-primary'> Main Page</a>
+		</div>
 		
 	</body>
 
