--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>Game Page</title>
     <!-- https://web.dev/viewport/  -->
@@ -6,11 +7,11 @@
     <!-- INSERTING BOOTSTRAP LIBRARY -->
     <!-- BOOTSTRAP:CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!-- BOOTSTRAP:JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-            crossorigin="anonymous"></script>
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+    </script>
 
     <!-- INSERTING JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,48 +23,59 @@
 </head>
 
 <body>
-<header>
-    <h2>KnowItAll</h1>
-</header>
-<body>
-<div class='container'>
-    <div class='container'>
-        <div class="row text-center">
-            <h1>KNOWIT ALL</h1>
-        </div>
-    </div>
-    <div class='container'>
-        <div class="row">
-            <div id="app" class="mx-auto" style="width: 300px;"></div>
-        </div>
-    </div>
-    <hr>
-    <div class='container'>
-        <div class="row">
-            <div class="jumbotron well">
-                <h1 class="text-center" id='question'>{{q.question}}</h1>
+    <header>
+        <h2>KnowItAll</h1>
+    </header>
+
+    <body>
+        <div class='container'>
+            <div class='container'>
+                <div class="row text-center">
+                    <h1>KNOWIT ALL</h1>
+                </div>
+            </div>
+            <div class='container'>
+                <div class="row">
+                    <div id="app" class="mx-auto" style="width: 300px;"></div>
+                </div>
+            </div>
+            <hr>
+            <div class='container'>
+                <div class="row">
+                    <div class="jumbotron well">
+                        <h1 class="text-center" id='question'>{{q.question}}</h1>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class='container'>
+                <div class="row answers">
+                    <div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
+                    <div class='col-md-6 text-center option' id="option_2">B. {{q.option_1}}</div>
+                </div>
+
+                <div class="row answers">
+                    <div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
+                    <div class='col-md-6 text-center option' id="option_4">D {{q.option_3}}</div>
+                </div>
             </div>
         </div>
-    </div>
-    <br>
-    <div class='container'>
-        <div class="row answers">
-            <div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
-            <div class='col-md-6 text-center option' id="option_2">B. {{q.option_1}}</div>
+
+        <div>
+            <h1 id="Counter">0/0<h1/>
         </div>
 
-        <div class="row answers">
-            <div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
-            <div class='col-md-6 text-center option' id="option_4">D {{q.option_3}}</div>
+        <div>
+            <h1 id="Timer">x seconds remaining</h1>
         </div>
-    </div>
-</div>
-<br>
-<div class='container'>
-    ​<a href='/'>QUIT GAME</a>
-</div>
 
 
-</body>
+        <br>
+        <div class='container'>
+            ​<a href='/'>QUIT GAME</a>
+        </div>
+
+
+    </body>
 
 </html>
