Check Answer, Submit, Next function
Upload game function:
-check the answer if it is right, color change for right or wrong answers.
-submit answer button: shows right answer, and count attempts
-next question button: go to next question

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -59,6 +59,8 @@
 				<br>
 				<hr>
 				<div class="text-center">
+					<button id="submit" class="btn btn-outline-primary">Submit</button>
+					<button id="next" class="btn btn-outline-primary">Next Question</button>
 					<button id = 'submitScore' class="btn btn-outline-primary" >Submit Score</button>
 				</div>
 				
