Update with remaining lives shows up

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -18,7 +18,8 @@
 	<script src='/static/js/game.js'></script>
 	<body>
 		<header>
-			<h2>KnowItAll</h1>
+			<h2>KnowItAll</h2>
+			<div id = "div1" class = "stats"></div>
 		</header>
 		<body>
 			<div class = 'container' stlye="z-index:0;">
