Skip Question button
Up to 3 times in a single game session

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -18,7 +18,7 @@
 	<script src='/static/js/game.js'></script>
 	<body>
 		<header>
-			<h2>KnowItAll</h1>
+			<h2>KnowItAll</h2>
 		</header>
 		<body>
 			<div class = 'container' stlye="z-index:0;">
@@ -60,6 +60,7 @@
 				<hr>
 				<div class="text-center">
 					<button id = 'submitScore' class="btn btn-outline-primary" >Submit Score</button>
+                    <button id = 'SkipQuestion' class="btn btn-outline-primary" >Skip Question</button>
 				</div>
 				
 				<div class='container'>
