--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -20,7 +20,7 @@
 		<header>
 			<h2>KnowItAll</h2>
 		</header>
-		<body>
+
 			<div class = 'container' stlye="z-index:0;">
 				<div class='container'>
 					<div class='container'>
@@ -58,6 +58,15 @@
 				</div>
 				<br>
 				<hr>
+                        <script type="text/javascript">
+                            var clicks = 0;
+                            function onClick()
+                            {clicks += 1;
+                            document.getElementById("clicks").innerHTML = clicks;
+                            };</script>
+            <button type="button" onClick="onClick()">Next</button>
+                        <em><p>Complete Questions: <a id="clicks">0</a></p></em>
+
 				<div class="text-center">
 					<button id = 'submitScore' class="btn btn-outline-primary" >Submit Score</button>
                     <button id = 'SkipQuestion' class="btn btn-outline-primary" >Skip Question</button>
@@ -68,6 +77,7 @@
 				</div>
 				<br>
 			</div>
+
 			
 			<div  id="cover-caption" class="container" style='display: none;background-color: black;margin-top:-350px;'>
 				<div class="row text-white">
