Make play game button as bootstrap type

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -29,9 +29,6 @@
 	</style>
 
 	<body>
-		<header>
-			<h2>KnowItAll</h1>
-		</header>
 
 			<div class = 'container' stlye="z-index:0;">
 				<div class='container'>
@@ -48,7 +45,13 @@
 						</div>
 					</div>
 					<hr>
-					<button id="startgame" style="background: rgb(252, 95, 95);">Play</button>
+					<div class="container">
+						<div class="btn-group btn-group-justified">
+							<div class="btn-group">
+								<button type="button" class="btn btn-primary btn-lg" id="startgame">Play</button>
+							</div>
+						</div>
+					</div>
 					<div class='container'>
 						<div class= "row">
 							<div class="jumbotron well">
