--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -16,17 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 	<script src='/static/js/game.js'></script>
-
-	<script src="./../static/js/game.js"></script>
-	<style>
-		.jumbotron.well {
-			display: none;
-		}
-
-		.row.answers {
-			display: none;
-		}
-	</style>
+	<link rel="stylesheet" href="/static/css/game.css"/>
 
 	<body>
 
