--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -46,13 +46,15 @@
 					<br>
 					<div class='container'>
 						<div class= "row answers">
-							<div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
-							<div class='col-md-6 text-center option'  id="option_2">B. {{q.option_1}} </div>
+							<div class='col-md-5 text-center option btn btn-outline-secondary' id="option_1">A. {{q.answer}}</div>
+							<div class = "col-md-1"></div>
+							<div class='col-md-5 text-center option btn btn-outline-secondary'  id="option_2">B. {{q.option_1}} </div>
 						</div>
-						
+						<br>
 						<div class= "row answers">
-							<div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
-							<div class='col-md-6 text-center option'  id="option_4">D {{q.option_3}}</div>
+							<div class='col-md-5 text-center option btn btn-outline-secondary' id="option_3">C {{q.option_2}}</div>
+							<div class = "col-md-1"></div>
+							<div class='col-md-5 text-center option  btn btn-outline-secondary'  id="option_4">D {{q.option_3}}</div>
 						</div>
 					</div>
 				</div>
