update with newest iter_1 push

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -19,19 +19,15 @@
 	<body>
 		<header>
 			<h2>KnowItAll</h2>
-<<<<<<< Updated upstream
 			<div id = "div1" class = "stats"></div>
-=======
-				<div id = "div1" class = "stats"></div>
->>>>>>> Stashed changes
 		</header>
 		<body>
 			<div class = 'container' stlye="z-index:0;">
 				<div class='container'>
 					<div class='container'>
-						<div class = "row text-center"> 
-					<div class = "row text-center"> 
-						<div class = "row text-center"> 
+						<div class = "row text-center">
+					<div class = "row text-center">
+						<div class = "row text-center">
 								<h1>KNOWIT ALL</h1>
 						</div>
 					</div>
@@ -51,13 +47,15 @@
 					<br>
 					<div class='container'>
 						<div class= "row answers">
-							<div class='col-md-6 text-center option' id="option_1">A. {{q.answer}}</div>
-							<div class='col-md-6 text-center option'  id="option_2">B. {{q.option_1}} </div>
+							<div class='col-md-5 text-center option btn btn-outline-secondary' id="option_1">A. {{q.answer}}</div>
+							<div class = "col-md-1"></div>
+							<div class='col-md-5 text-center option btn btn-outline-secondary'  id="option_2">B. {{q.option_1}} </div>
 						</div>
-						
+						<br>
 						<div class= "row answers">
-							<div class='col-md-6 text-center option' id="option_3">C {{q.option_2}}</div>
-							<div class='col-md-6 text-center option'  id="option_4">D {{q.option_3}}</div>
+							<div class='col-md-5 text-center option btn btn-outline-secondary' id="option_3">C {{q.option_2}}</div>
+							<div class = "col-md-1"></div>
+							<div class='col-md-5 text-center option  btn btn-outline-secondary'  id="option_4">D {{q.option_3}}</div>
 						</div>
 					</div>
 				</div>
@@ -68,13 +66,13 @@
 					<button id="next" class="btn btn-outline-primary">Next Question</button>
 					<button id = 'submitScore' class="btn btn-outline-primary" >Submit Score</button>
 				</div>
-				
+
 				<div class='container'>
 					​<a href='/'>QUIT GAME</a>
 				</div>
 				<br>
 			</div>
-			
+
 			<div  id="cover-caption" class="container" style='display: none;background-color: black;margin-top:-350px;'>
 				<div class="row text-white">
 					<div class="mx-auto text-center  p-4">
@@ -96,10 +94,10 @@
 					</div>
 				</div>
 			</div>
-			
-			
+
+
 	</body>
 
 
-	
+
 </html>
