--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -45,7 +45,7 @@
 						</div>
 					</div>
 					<br>
-					<div class='container'>
+					<div class='container' id="optionboard">
 						<div class= "row answers">
 							<div class='col-md-5 text-center option btn btn-outline-secondary' id="option_1">A. {{q.answer}}</div>
 							<div class = "col-md-1"></div>
@@ -67,13 +67,13 @@
 					<button id = 'submitScore' class="btn btn-outline-primary" >Submit Score</button>
 				</div>
 
-				<div class='container'>
+				<div class='container' id="quit">
 					​<a href='/'>QUIT GAME</a>
 				</div>
 				<br>
 			</div>
 
-			<div  id="cover-caption" class="container" style='display: none;background-color: black;margin-top:-350px;'>
+			<div  id="cover-caption" class="container" style='display: none;background-color: black;margin-top:-200px;'>
 				<div class="row text-white">
 					<div class="mx-auto text-center  p-4">
 						<h1 class="display-4 py-2 text-truncate">POST SCORE!</h1>
@@ -89,6 +89,9 @@
 								</div>
 								<br>
 								<button type="submit" class="btn btn-primary btn-lg">POST!</button>
+								<div class='container'>
+									​<a href='/'>QUIT GAME</a>
+								</div>
 							</form>
 						</div>
 					</div>
