moved start button to main page

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -45,17 +45,10 @@
                     </div>
                 </div>
                 <hr>
-                <div class="container">
-                    <div class="btn-group btn-group-justified">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-primary btn-lg" id="startgame">Play</button>
-                        </div>
-                    </div>
-                </div>
                 <div class='container'>
                     <div class="row">
                         <div class="jumbotron well">
-                            <h1 class="text-center" id='question'>{{q.question}}</h1>
+                            <h1 class="text-center" id='question'></h1>
                         </div>
                     </div>
                 </div>
@@ -63,21 +56,21 @@
                 <div class='container' id="optionboard">
                     <div class="row answers">
                         <div class='col-md-5 text-center option btn btn-outline-secondary' id="option_1">A.
-                            {{q.answer}}
+                           
                         </div>
                         <div class="col-md-1"></div>
                         <div class='col-md-5 text-center option btn btn-outline-secondary' id="option_2">B.
-                            {{q.option_1}}
+                           
                         </div>
                     </div>
                     <br>
                     <div class="row answers">
                         <div class='col-md-5 text-center option btn btn-outline-secondary' id="option_3">C
-                            {{q.option_2}}
+                            
                         </div>
                         <div class="col-md-1"></div>
                         <div class='col-md-5 text-center option  btn btn-outline-secondary' id="option_4">D
-                            {{q.option_3}}
+                           
                         </div>
                     </div>
                 </div>
