--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,13 +1,36 @@
 <html>
 	<head>
 		<title>Main Page</title>
+		<!-- INSERTING BOOTSTRAP LIBRARY -->
+		<!-- BOOTSTRAP:CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+			integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+		<!-- BOOTSTRAP:JS -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+				integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+		</script>
+
+		<!-- INSERTING JQUERY -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 
 	<body>
-		<h1>Main Page</h1>
-		<a href = '/game'>GO TO: Game Page</a>
+		<div class="container">
+			<div class="row text-center">
+				<h1>KNOWIT ALL</h1>
+			</div>
+		</div>
 		<br>
-		<a href = '/leaderboard'>GO TO: Leader Board Page</a>
+		<hr>
+		<div class="container">
+			<div class="text-center">
+					<a href='/game' class="btn btn-primary btn-lg" id="startgame">START</a>
+			</div>
+		</div>
+		
+		<br>
+		<hr>
+		<a href = '/leaderboard' class="btn btn-outline-primary btn-lg">Leader Board</a>
 	</body>
 
 </html>
