--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Game Page</title>
+    <title>Trivia Game</title>
     <!-- https://web.dev/viewport/  -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- INSERTING BOOTSTRAP LIBRARY -->
