--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>LeaderBoard Page</title>
+		<title>LeaderBoard</title>
 		    <!-- INSERTING BOOTSTRAP LIBRARY -->
     <!-- BOOTSTRAP:CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,7 @@
 
 	<body>
 		<div class = 'container'>
-			<h1>LeaderBoard Page</h1>
+			<h1>Top Scores</h1>
 			<table class='table'>
 				<tr>
 					<th>Username</th>
