--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<div class = 'container'>
-			<h1>Top Scores</h1>
+			<h1 class='text-center'>Top Scores</h1>
 			<table class='table'>
 				<tr>
 					<th>Username</th>
