--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -25,7 +25,7 @@
                 <!-- title -->
                 <div class="row text-center">
                     <div class="row text-center">
-                        <h1>KNOWIT ALL</h1>
+                        <h1>KNOWITALL</h1>
                     </div>
                 </div>
                 <hr>
@@ -33,7 +33,6 @@
                     <div class = "row">
                         <div class='col-md-2'>
                             <h3>STATS</h3>
-                            <em><p>Complete Questions: <a id="clicks">0</a></p></em>
                             <div id="div1" class="stats"></div>
                             <div>
                                 <h4>SCORE: <span id="Counter">0</span></h4>
@@ -41,7 +40,7 @@
                             <hr>
                             <div>
                                 <h4>TIME</h4>
-                                <h4 id="Timer">x seconds</h4>
+                                <h4 id="Timer">30 seconds</h4>
                             </div>
                             <hr>
                             <div>
