--- a/source/templates/main.html
+++ b/source/templates/main.html
@@ -1,14 +1,7 @@
-<html>
-	<head>
-		<title>Main Page</title>
-		<!-- BOOTSTRAP:JS -->
-		<script src="/static/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-		<!-- JQUERY -->
-		<script src="/static/js/j_query.js"></script>
-	</head>
-
-	<body>
+{% extends "base.html" %} 
+{% block title %}Main page{% endblock %} 
+{% block content %}
+	
 		<div class="container">
 			<div class="row text-center">
 				<h1>KNOWITALL</h1>
@@ -25,6 +18,5 @@
 		<br>
 		<hr>
 		<a href = '/leaderboard' class="btn btn-outline-primary btn-lg">Leader Board</a>
-	</body>
+{% endblock %}
 
-</html>
