html refactors: all pages ext4end from base.html

--- a/source/templates/leaderboard.html
+++ b/source/templates/leaderboard.html
@@ -1,34 +1,23 @@
-<html>
-	<head>
-		<title>LeaderBoard</title>
-		<!-- BOOTSTRAP:JS -->
-		<script src="/static/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-		<!-- JQUERY -->
-		<script src="/static/js/j_query.js"></script>
+{% extends "base.html" %}
+{% block title %} LeaderBoard {% endblock %}
 
-	</head>
+{% block content %}
 
-	<body>
-		<div class = 'container'>
-			<h1 class='text-center'>Top Scores</h1>
-			<table class='table'>
-				<tr>
-					<th>Username</th>
-					<th>Score</th>
-				</tr>
-				<tbody class='table-striped'>
-				{% for s in scores %}
-				<tr>
-					<td>{{ s.username }}</td>
-					<td>{{ s.score }}</td>
-				</tr>
-				{% endfor %}
-				</tbody>
-			</table>
-			<a href = '/game' class = 'btn btn-primary'> Game Page</a>  <a href = '/' class = 'btn btn-primary'> Main Page</a>
-		</div>
-		
-	</body>
+<h1 class='text-center'>Top Scores</h1>
+<table class='table'>
+	<tr>
+		<th>Username</th>
+		<th>Score</th>
+	</tr>
+	<tbody class='table-striped'>
+		{% for s in scores %}
+		<tr>
+			<td>{{ s.username }}</td>
+			<td>{{ s.score }}</td>
+		</tr>
+		{% endfor %}
+	</tbody>
+</table>
+<a href = '/game' class = 'btn btn-primary'> Game Page</a>  <a href = '/' class = 'btn btn-primary'> Main Page</a>
 
-</html>
+{% endblock %}
