--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -3,31 +3,26 @@
     <head>
         <meta charset="UTF-8" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+         <!-- bootstrap Javascript CDN -->
+         <script src="/static/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+         <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+         <!-- JQUERY -->
+         <script src="/static/js/j_query.js"></script>
 
-        <!-- bootstrap CSS CDN -->
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-            crossorigin="anonymous"
-        />
+        <!-- game.js file -->
+         <script type="text/javascript" src="{{ url_for('static', filename='/js/game.js') }}"></script>
 
         <title>{% block title %} Home {% endblock %}</title>
     </head>
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbar"
-            >
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
+                    <a class="nav-item nav-link" id="home" href="/">Home</a>
                     <!-- TODO: change the each buttons to the game buttons -->
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" id="logout" href="/logout">
@@ -37,7 +32,6 @@
                         Player Profile
                     </a>
                     {% else %}
-                    <a class="nav-item nav-link" id="home" href="/">Home</a>
                     <a class="nav-item nav-link" id="login" href="/login">
                         Login
                     </a>
@@ -48,13 +42,12 @@
                 </div>
             </div>
         </nav>
-
-        <!-- TODO: change the flashed message -->
-        <!-- if error happened -->
+        <!-- FLASH MESSAGES  -->
         {% with messages = get_flashed_messages(with_categories=true) %} 
         {% if messages %} 
         {% for category, message in messages %} 
-            {% if category == 'error' %}
+            <!-- if error happened -->
+        {% if category == 'error' %}
             <div class="alert alert-danger alter-dismissable fade show" role="alert">
                 {{ message }}
                 <button type="button" class="close" data-dismiss="alert">
@@ -62,26 +55,20 @@
                 </button>
             </div>
             <!-- else (success) -->
-            {% else %}
-        <div class="alert alert-success alter-dismissable fade show" role="alert">
+        {% else %}
+            <div class="alert alert-success alter-dismissable fade show" role="alert">
             {{ message }}
             <button type="button" class="close" data-dismiss="alert">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
-            {% endif %} 
+        {% endif %} 
         {% endfor %} 
         {% endif %} 
         {% endwith %}
 
         <div class="container">{% block content %} {% endblock %}</div>
 
-        <!-- bootstrap Javascript CDN -->
-        <script src="/static/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-		<!-- JQUERY -->
-		<script src="/static/js/j_query.js"></script>
-
-        <script type="text/javascript" src="{{ url_for('static', filename='/js/game.js') }}"></script>
+       
     </body>
 </html>
