--- a/source/templates/game.html
+++ b/source/templates/game.html
@@ -1,15 +1,7 @@
-<html>
+{% extends "base.html" %}
+{% block title %} Game {% endblock %}
 
-<head>
-    <title>Trivia Game</title>
-		<!-- BOOTSTRAP:JS -->
-		<script src="/static/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-		<!-- JQUERY -->
-		<script src="/static/js/j_query.js"></script>
-    <script src='/static/js/game.js'></script>
-    <link rel="stylesheet" href="/static/css/game.css"/>
-<body>
+{% block content %}
     <div class='container' stlye="z-index:0;">
         <div class='container'>
             <div id = 'main-container'  class='container'>
@@ -118,5 +110,4 @@
         </div>
 
     </div>
-</body>
-</html>
+{% endblock %}
