Current Draft of Code Updating from backend, not properly working

--- a/source/templates/game.html
+++ b/source/templates/game.html
@@ -16,7 +16,9 @@
                     <div class = "row">
                         <div class='col-md-2'>
                             <h3>STATS</h3>
-                            <div id="div1" class="stats"></div>
+                            <div id="div1" class="stats">
+                                <h4>LIVES: <span style="color:red"> 3/3 </span></h4>
+                            </div>
                             <div>
                                 <h4>SCORE: <span id="Counter">0</span></h4>
                             </div>
