--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -6,7 +6,7 @@
 body{
 	perspective: 2500px;
 	overflow: hidden;
-	background-color: gainsboro;
+	background-color: beige;
 }
 
 #text{
@@ -16,7 +16,7 @@ body{
 	height: 600px;
 	font-size: 8em;
 	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg);
+	/* transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg); */
 }
 
 .text-3d {
@@ -47,8 +47,9 @@ body{
 	width: 1920px;
 	height: 1080px;
 	/* If you don’t need 3D effects, delete the transform attribute */
-	transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg) scale(1.2);
+	/* transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg) scale(1.2); */
 	/* You can add background attribute if you want */
+	
 }
 	
 #box{
@@ -58,7 +59,7 @@ body{
 	height: 720px;
 	font-size: 2.6em;
     /* If you don’t need 3D effects, delete the transform attribute */
-	transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg);
+	/* transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg); */
 }
 
 #box a{
@@ -79,5 +80,4 @@ body{
 	cursor: pointer;
 	transition: all 0.3s;
 	color: #111;
-		
 }
