--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -27,11 +27,10 @@
 		<div id="bg"></div>
 		<div class="container" id="box">
 			<div class="text-center">
-				<a href='/game' id="startgame" style="width: 550px; height: 300px; left: 400px; top: 140px; display: flex; justify-content: center; align-items: center; font-size: 2.8em; text-decoration:none;">START</a>
-				<a href='/leaderboard' style="width: 320px; height: 180px; left: 70px; top: 140px; text-decoration:none;">LeaderBoard</a>
-				<a style="width: 350px; height: 200px; left: 960px; top: 240px; text-decoration:none;">Player Profie</a>
-				<a style="width: 300px; height: 150px; left: 290px; top: 450px; text-decoration:none;">About</a>
-		
+				<a href='/game' id="startgame" style="width: 550px; height: 300px; left: 400px; top: 140px; display: flex; justify-content: center; align-items: center; font-size: 2.8em; text-decoration:none; background-color: rgb(85, 196, 162);">START</a>
+				<a href='/leaderboard' style="width: 320px; height: 180px; left: 70px; top: 140px; text-decoration:none; background-color:rgb(221, 119, 124);">LeaderBoard</a>
+				<a style="width: 350px; height: 200px; left: 960px; top: 240px; text-decoration:none; background-color:rgb(59, 145, 214)">Player Profie</a>
+				<a style="width: 300px; height: 150px; left: 290px; top: 450px; text-decoration:none; background-color: grey;">About</a>
 			</div>
 		</div>
 		
