--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -8,10 +8,9 @@
          <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
          <!-- JQUERY -->
          <script src="/static/js/j_query.js"></script>
-
-        <!-- game.js file -->
-         <script type="text/javascript" src="{{ url_for('static', filename='/js/game.js') }}"></script>
-
+        
+         {% block head %} {% endblock %}
+        
         <title>{% block title %} Home {% endblock %}</title>
     </head>
 
