New function added, game.js refactor
1. 50/50 lifeline is now available:
    ·front end JavaScript code will hide 2 options which are not the answer once player click 50/50 lifeline.
    ·back end python code will find out none answer options and saved them into Game database for front end use.

2. refactored  game.js Submit function  and DisplayNewQuestion function:
    ·Now turn on/off related buttons, related functions, and reset related values to default has been moved to function SettingForSubmitButton() and function SettingForDisplayNewQuestion()

--- a/source/templates/game.html
+++ b/source/templates/game.html
@@ -31,6 +31,7 @@
                             <div>
                                 <h4>Lifelines</h4>
                                 <button id='SkipQuestion' class="btn btn-outline-primary">Skip Question (3)</button>
+                                <button id='FiftyFifty' class="btn btn-outline-primary">50/50 (3)</button>
                             </div>
                         </div>
                         <!--  DISPLAY QUESTION -->
