--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -8,9 +8,8 @@
          <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
          <!-- JQUERY -->
          <script src="/static/js/j_query.js"></script>
-
-        <!-- game.js file -->
-         <script type="text/javascript" src="{{ url_for('static', filename='/js/game.js') }}"></script>
+         <script type="text/javascript" src="{{ url_for('static', filename='/js/test.js') }}"></script>
+         {% block head %} {% endblock %}
 
         <title>{% block title %} Home {% endblock %}</title>
     </head>
@@ -43,9 +42,9 @@
             </div>
         </nav>
         <!-- FLASH MESSAGES  -->
-        {% with messages = get_flashed_messages(with_categories=true) %} 
-        {% if messages %} 
-        {% for category, message in messages %} 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
             <!-- if error happened -->
         {% if category == 'error' %}
             <div class="alert alert-danger alter-dismissable fade show" role="alert">
@@ -62,13 +61,13 @@
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
-        {% endif %} 
-        {% endfor %} 
-        {% endif %} 
+        {% endif %}
+        {% endfor %}
+        {% endif %}
         {% endwith %}
 
         <div class="container">{% block content %} {% endblock %}</div>
 
-       
+
     </body>
 </html>
