--- a/source/static/css/main.css
+++ b/source/static/css/main.css
@@ -6,7 +6,7 @@
 body{
 	perspective: 2500px;
 	overflow: hidden;
-	background-color: beige;
+	background-color: rgb(255, 255, 211);
 }
 
 #text{
@@ -62,6 +62,16 @@ body{
 	/* transform: rotateX(5deg) rotateY(15deg) rotateZ(-5deg); */
 }
 
+#box a#leaderboard {
+	background-color: rgb(216, 111, 116);
+}
+#box a#startgame {
+	background-color: rgb(85, 196, 162);
+}
+#box a#playerpofile {
+	background-color: rgb(95, 157, 207)
+}
+
 #box a{
 	position: absolute;
 	border: 2px solid #EEE;
@@ -79,5 +89,15 @@ body{
 	background: #FFF;
 	cursor: pointer;
 	transition: all 0.3s;
-	color: #111;
+	color: rgb(0, 0, 0);
+}
+
+#box a#leaderboard:hover {
+	background-color: rgb(199, 59, 66);
+}
+#box a#startgame:hover {
+	background-color: rgb(39, 202, 153)
+}
+#box a#playerpofile:hover {
+	background-color: rgb(48, 135, 206)
 }
