--- a/source/templates/category.html
+++ b/source/templates/category.html
@@ -1,7 +1,12 @@
-<link rel="stylesheet" href="/static/css/category.css"/>
-<script type="text/javascript" src="{{ url_for('static', filename='/js/category.js') }}"></script>
 {% extends "base.html" %} 
-{% block title %}Main page{% endblock %} 
+
+{% block head %} 
+<!-- category.js file -->
+<script type="text/javascript" src="{{ url_for('static', filename='/js/category.js') }}"></script>
+<link rel="stylesheet" href="/static/css/category.css"/>
+{% endblock %}
+
+{% block title %}Category{% endblock %} 
 {% block content %}
 	
 		<div class="container">
@@ -13,48 +18,42 @@
 		<!-- <hr> -->
 		<div class="container" id="categorybox">
 			<div class="container">
-				<form method="POST" action="/category/select">
-					<button class="text-center" type="submit" name="geography" id="category_geo">
+				<!-- <form method="POST"> -->
+					<button class="text-center" type="submit" name="searchbox" id="categories_geo">
 						<img src="{{ url_for('static', filename='/image/geo.jfif') }}" width="180" height="100">
 						<div>GEOGRAPHY</div>
 					</button>
-				</form>
-				<form method="POST">
-					<button class="text-center" onclick="location.href = '/game';" type="submit" name="art" id="category_art">
+				<!-- </form> -->
+					<button class="text-center" type="submit" name="art" id="categories_art">
 						<img src="{{ url_for('static', filename='/image/art.jfif') }}" width="180" height="100">
 						<div>ART</div>
 					</button>
-				</form>
-				<form method="POST">
-					<button class="text-center" onclick="location.href = '/game';" type="submit" name="computer-science" id="category_cs">
+				
+					<button class="text-center" type="submit" name="computer-science" id="categories_cs">
 						<img src="{{ url_for('static', filename='/image/CS.png') }}" width="180" height="100">
 						<div>COMPUTER SCIENCE</div>
 					</button>
-				</form>
-				<form method="POST">
-					<button class="text-center" onclick="location.href = '/game';" type="submit" name="science" id="category_s">
+				
+					<button class="text-center" type="submit" name="science" id="categories_s">
 						<img src="{{ url_for('static', filename='/image/science.jfif') }}" width="180" height="100">
 						<div>SCIENCE</div>
 					</button>
-				</form>
-				<form method="POST">
-					<button class="text-center" onclick="location.href = '/game';" type="submit" name="mythology" id="category_m">
+				
+					<button class="text-center" type="submit" name="mythology" id="categories_m">
 						<img src="{{ url_for('static', filename='/image/mythology.jpg') }}" width="180" height="100">
 						<div>MYTHOLOGY</div>
 					</button>
-				</form>
-				<form method="POST">
-					<button class="text-center" onclick="location.href = '/game';" type="submit" name="TV-shows" id="category_tv-s">
+				
+					<button class="text-center" type="submit" name="TV-shows" id="categories_tv-s">
 						<img src="{{ url_for('static', filename='/image/tv_shows.jfif') }}" width="180" height="100">
 						<div>TV SHOWS</div>
 					</button>
-				</form>
-				<form method="POST">
-					<button class="text-center" onclick="location.href = '/game';" type="submit" name="movie" id="category_movie">
+				
+					<button class="text-center" type="submit" name="movie" id="categories_movie">
 						<img src="{{ url_for('static', filename='/image/Movie.jpg') }}" width="180" height="100">
 						<div>MOVIE</div>
 					</button>
-				</form>
+				
 			</div>
 		</div>
 {% endblock %}
