--- a/source/templates/main.html
+++ b/source/templates/main.html
@@ -1,6 +1,11 @@
-<script src='/static/js/main.js'></script>
-<link rel="stylesheet" href="/static/css/main.css"/>
 {% extends "base.html" %} 
+
+{% block head %} 
+<!-- main.js file -->
+<script type="text/javascript" src="{{ url_for('static', filename='/js/main.js') }}"></script>
+<link rel="stylesheet" href="/static/css/main.css"/>
+{% endblock %}
+
 {% block title %}Main page{% endblock %} 
 {% block content %}
 	
